ui: prevent sidebar content from overflowing - show scroll within the sidebar content

--- a/ui/src/style.css
+++ b/ui/src/style.css
@@ -65,6 +65,7 @@ body {
 #frame-content {
     display: grid;
     grid-template-columns: 1fr 300px;
+    overflow: auto;
 }
 
 #sidebar {
@@ -73,6 +74,9 @@ body {
     border-left: 1px solid var(--border-color);
     box-shadow: 0 5px 10px var(--box-shadow-color-primary);
     z-index: 1;
+    overflow: auto;
+    display: grid;
+    grid-template-rows: auto 1fr;
 
     .sidebar-item {
         padding: 0.5rem 1rem;
@@ -82,6 +86,11 @@ body {
         &.active {
             background-color: var(--background-color);
         }
+    }
+
+    /* sidebar content */
+    div:nth-child(2) {
+        overflow: auto;
     }
 }
 
